# surfload

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  SERVER_CHEATSHEET.md  config.example.yaml  pyproject.toml  shazuploader.py
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
scripts/: apply_github_protection.ps1  first_real_test.sh  setup_server.sh
src/surfload/: __init__.py  cli.py  core.py
src/surfload/plugins/: __init__.py  base.py  buzzheavier.py  catbox.py  dailyuploads.py  dummy_local.py  fileio.py  fileq.py  gofile.py  megaup.py  onefichier.py  send_now.py  tmpfiles_org.py  transfer_sh.py  upload_ee.py  vikingfile.py
src/surfload/utils/: __init__.py  compression.py  config.py  credentials.py  logger.py  streaming.py
tests/: test_compression.py  test_credentials.py  test_plugins.py  test_resume.py  test_streaming.py
